vercre-holder/tests/snapshots/issuance__create_offer.snap
---
source: vercre-wallet/tests/issuance.rs
assertion_line: 28
expression: "&create_offer_response"
---
credential_offer:
  credential_issuer: "http://vercre.io"
  credential_configuration_ids:
    - EmployeeID_JWT
  grants:
    "urn:ietf:params:oauth:grant-type:pre-authorized_code":
      pre-authorized_code: "[pre-authorized_code]"
      tx_code:
        input_mode: numeric
        length: 6
        description: Please provide the one-time code received
user_code: "[user_code]"
