vercre-holder/tests/snapshots/issuance__issuance.snap
---
source: vercre-holder/tests/issuance.rs
assertion_line: 42
expression: issuance
---
id: "[id]"
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
status: Ready
offer:
  credential_configuration_ids:
    - EmployeeID_JWT
  credential_issuer: "http://vercre.io"
  grants:
    "urn:ietf:params:oauth:grant-type:pre-authorized_code":
      pre-authorized_code: "[pre-authorized_code]"
      tx_code:
        input_mode: numeric
        length: 6
        description: Please provide the one-time code received
offered:
  EmployeeID_JWT:
    format: jwt_vc_json
    scope: EmployeeIDCredential
    cryptographic_binding_methods_supported:
      - "did:jwk"
      - "did:ion"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "https://vercre.github.io/assets/employee.png"
          alt_text: Vercre Logo
        description: Vercre employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "https://vercre.github.io/assets/vercre-background.png"
          alt_text: Vercre Background
        text_color: "#ffffff"
    credential_definition:
      "@context":
        - "https://www.w3.org/2018/credentials/v1"
        - "https://www.w3.org/2018/credentials/examples/v1"
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      credentialSubject:
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        familyName:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        givenName:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
pin: ~
token:
  access_token: ""
  token_type: Bearer
  expires_in: 0
