vercre-holder/tests/snapshots/issuance__pre_auth_credentials.snap
---
source: vercre-holder/tests/issuance.rs
assertion_line: 83
expression: credentials
---
- id: "http://vercre.io/credentials/EmployeeIDCredential"
  issuer: "http://vercre.io"
  vc:
    "@context":
      - "https://www.w3.org/2018/credentials/v1"
      - "http://vercre.io/credentials/v1"
    credentialSubject:
      email: normal.user@example.com
      family_name: Person
      given_name: Normal
      id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
      proficiency: "3"
    id: "http://vercre.io/credentials/EmployeeIDCredential"
    issuanceDate: "[issuanceDate]"
    issuer: "http://vercre.io"
    type:
      - VerifiableCredential
      - EmployeeIDCredential
  metadata:
    credential_definition:
      "@context":
        - "https://www.w3.org/2018/credentials/v1"
        - "https://www.w3.org/2018/credentials/examples/v1"
      credentialSubject:
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        family_name:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
      type:
        - VerifiableCredential
        - EmployeeIDCredential
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "https://vercre.github.io/assets/employee.png"
          alt_text: Vercre Logo
        description: Vercre employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "https://vercre.github.io/assets/vercre-background.png"
          alt_text: Vercre Background
        text_color: "#ffffff"
    format: jwt_vc_json
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    scope: EmployeeIDCredential
  issued: "[issued]"
  logo:
    image: ""
    mediaType: ""
